# graphrag-chinese

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  pyproject.toml
benchmarks/answers/: chinese.jsonl  chinese_chunked.jsonl  chinese_chunked_embedv4.jsonl  chinese_embedv4.jsonl  chunked.jsonl  chunked_embedv4.jsonl  config_a.jsonl  config_b.jsonl  default.jsonl  embedv4.jsonl
benchmarks/questions/: questions_a.jsonl  questions_b.jsonl
data/: chinese_prompts.yaml  pre_chunk.yaml
data/prompts_chinese/: community_report_text.txt  extract_graph.txt  question_gen_system_prompt.txt
docs/examples_notebooks/: api_overview.ipynb  custom_vector_store.ipynb  local_search.ipynb
graphrag/api/: index.py  query.py
graphrag/callbacks/: noop_query_callbacks.py  query_callbacks.py
graphrag/cli/: main.py
graphrag/config/: embeddings.py
graphrag/language_model/: factory.py  manager.py
graphrag/logger/: blob_workflow_logger.py  progress.py
graphrag/query/: factory.py  indexer_adapters.py
graphrag/storage/: cosmosdb_pipeline_storage.py  file_pipeline_storage.py  memory_pipeline_storage.py  pipeline_storage.py
graphrag/utils/: api.py  storage.py
graphrag/vector_stores/: azure_ai_search.py  base.py
src/graphrag_chinese/: constants.py  local_search.py  question_gen.py  shared_resources.py
templates/: .env.example  chinese_prompts.yaml  chinese_prompts_chunked.yaml  chinese_prompts_chunked_embedv4.yaml  chinese_prompts_embedv4.yaml  chunked.yaml  chunked_embedv4.yaml  default.yaml  embedv4.yaml
tests/: conftest.py  mock_provider.py
(+101 files in other folders)
