[project]
name = "graphrag-chinese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "youkwan", email = "144937481+youkwan@users.noreply.github.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = ["graphrag", "eval"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
graphrag = { workspace = true }
eval = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "standard"
include = [
    "packages/*",
    "graphrag-chinese/*",
]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC", "UP"]

[tool.rumdl]
disable = ["MD013"]
include = ["README.md"]
exclude = [".git", "node_modules"]
ignore-gitignore = false

[tool.rumdl.MD044]
names = ["rumdl", "Markdown", "GitHub", "JavaScript", "Node.js", "TypeScript"]